<?xml version="1.0"?>
<package format="3">
  <name>control</name>
  <version>1.0.0</version>

  <description>3D models of the Megarover 3.0 for simulation and visualization</description>
  <maintainer email="kotoku9924@gmail.com">tokuda</maintainer>


  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>libboost-dev</depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>mouse_teleop</exec_depend>
  <exec_depend>joy</exec_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>