<?xml version="1.0"?>
<package format="3">
  <name>description</name>
  <version>1.0.0</version>

  <description>3D models of the Megarover 3.0 for simulation and visualization</description>
  <maintainer email="kotoku9924@gmail.com">tokuda</maintainer>


  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>