<?xml version="1.0"?>
<package format="3">
  <name>monitor</name>
  <version>1.0.0</version>

  <description>3D models of the Megarover 3.0 for simulation and visualization</description>
  <maintainer email="kotoku9924@gmail.com">tokuda</maintainer>


  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>libboost-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>